--- a/TwoLayerNet_p114.ipynb
+++ b/TwoLayerNet_p114.ipynb
@@ -2,17 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# coding: utf-8\n",
     "import sys, os\n",
-    "sys.path.append(os.pardir)  # 親ディレクトリのファイルをインポートするための設定\n",
-    "from common.functions import *\n",
-    "from common.gradient import numerical_gradient\n",
-    "\n",
-    "\n",
+    "sys.path.append(os.pardir)  # 親ディレクトリのファイルをインポートするための設定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def numerical_gradient(f, x):\n",
+    "    h = 1e-4 # 0.0001\n",
+    "    grad = np.zeros_like(x)\n",
+    "    \n",
+    "    it = np.nditer(x, flags=['multi_index'], op_flags=['readwrite'])\n",
+    "    while not it.finished:\n",
+    "        idx = it.multi_index\n",
+    "        tmp_val = x[idx]\n",
+    "        x[idx] = float(tmp_val) + h\n",
+    "        fxh1 = f(x) # f(x+h)\n",
+    "        \n",
+    "        x[idx] = tmp_val - h \n",
+    "        fxh2 = f(x) # f(x-h)\n",
+    "        grad[idx] = (fxh1 - fxh2) / (2*h)\n",
+    "        \n",
+    "        x[idx] = tmp_val # 値を元に戻す\n",
+    "        it.iternext()   \n",
+    "        \n",
+    "    return grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class TwoLayerNet:\n",
     "\n",
     "    def __init__(self, input_size, hidden_size, output_size, weight_init_std=0.01):\n",
@@ -85,6 +116,260 @@
     "\n",
     "        return grads"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "net = TwoLayerNet(input_size = 784, hidden_size = 100, output_size = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(784, 100)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net.params[\"W1\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100,)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net.params[\"b1\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 10)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net.params[\"W2\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10,)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net.params[\"b2\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(a):\n",
+    "    c = np.max(a)\n",
+    "    exp_a = np.exp(a - c) # オーバーフロー対策  exp:指数関数\n",
+    "    sum_exp_a = np.sum(exp_a)\n",
+    "    y = exp_a / sum_exp_a\n",
+    "    \n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def cross_entropy_error(y, t):\n",
+    "    if y.ndim ==1:\n",
+    "        t = t.reshape(1, t.size)\n",
+    "        y = y.reshape(1, y.size)\n",
+    "    \n",
+    "    batch_size = y.shape[0]\n",
+    "    return - np.sum(t* np.log(y + 1e-7)) / batch_size "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.random.rand(100, 784)\n",
+    "y = net.predict(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.random.rand(100, 784)\n",
+    "t = np.random.rand(100, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grads = net.numerical_gradient(x, t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(784, 100)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grads[\"W1\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100,)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grads[\"b1\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 10)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grads[\"W2\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10,)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grads[\"b2\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
